Use embedded Chromium for Microsoft sign-in